1.20.1, lights/bloom optimizations and shadow fixes